# FinalYear

./: README.md
AttentionLens/: .gitignore
AttentionLens/backend/: main.py  requirements.txt
AttentionLens/backend/config/: settings.py
AttentionLens/backend/logic/: behavior_engine.py  feature_engineer.py  fusion_engine.py  ml_model.py  retraining_daemon.py  rule_engine.py
AttentionLens/backend/repository/: activity_repository.py  database_manager.py  database_schema.sql  db_init.py  models.py  repository.py  schema.sql  taxonomy_seeds.json  verify_db.py
AttentionLens/backend/server/: api_server.py
AttentionLens/backend/tests/: fixtures.py  test_behavior_engine.py  test_fusion_engine.py  test_rule_engine.py
AttentionLens/backend/tracker/: config.json  input_listener.py  test_tracker.py  tracker.py  verify_tracker.py  window_hook.py
AttentionLens/backend/utils/: errors.py  lifecycle.py  logger.py
AttentionLens/data/: attention_lens.db  attention_lens.db-shm  attention_lens.db-wal
AttentionLens/frontend/: index.html  package-lock.json  package.json  vite.config.ts
AttentionLens/src-tauri/: Cargo.toml  tauri.conf.json
AttentionLens/src-tauri/src/: main.rs
engine/: main.py  requirements.txt
engine/engine/: behavior_engine.py  feature_engineer.py  fusion_engine.py  ml_model.py  retraining_daemon.py  rule_engine.py
engine/repository/: activity_repository.py
engine/server/: api_server.py
engine/tracker/: input_listener.py  window_hook.py
frontend/: package.json
frontend/src/: App.tsx
src-tauri/: tauri.conf.json
src-tauri/src/: main.rs
(+23 files in other folders)
